<resources>
    <string name="app_name">RecipeKeeper</string>
    <string name="database" translatable="false">recipe_database</string>
    <string name="edit_recipe_title">Edit recipe</string>
    <string name="find_recipe_title">Find recipe</string>

    <string name="error_tag" translatable="false">AppError</string>
    <string name="error_msg_failed_connection">Failed to connect</string>

    <string name="pager_details">Details</string>
    <string name="pager_ingredients">Ingredients</string>
    <string name="pager_instructions">Instructions</string>
    <string name="pager_notes">Notes</string>

    <string name="extra_edit_mode" translatable="false">EDIT</string>
    <string name="extra_recipe" translatable="false">RECIPE</string>
    <string name="extra_recipe_id" translatable="false">RECIPE_ID</string>

    <string name="dialog_recipe_removal_confirmation">Are you sure you want to remove this recipe?</string>
    <string name="dialog_shopping_list_removal">Are you sure you want to remove all items?</string>
    <string name="dialog_recipe_selection_removal">Are you sure you want to remove selected recipes?</string>

    <string name="toast_recipe_modified">Recipe modified!</string>
    <string name="toast_recipe_added">Recipe added!</string>
    <string name="toast_no_ingredients_selected">No selected ingredients!</string>
    <string name="toast_invalid_name">Invalid name!</string>

    <string name="hint_ingredient">Ingredient</string>
    <string name="hint_enter_notes">Enter notes</string>
    <string name="hint_enter_ingredient">Enter ingredient</string>
    <string name="hint_enter_ingredients">Enter ingredients</string>
    <string name="hint_enter_url">Enter URL</string>
    <string name="hint_enter_instructions">Enter recipe instructions</string>
    <string name="hint_search">Search…</string>
    <string name="hint_enter_name">Enter item/group name</string>
    <string name="hint_enter_product">Enter product</string>

    <string name="text_remove_selected">Remove selected</string>
    <string name="text_paste_ingredients">Paste ingredients</string>
    <string name="text_save_recipe">Save recipe</string>
    <string name="text_name">Name</string>
    <string name="text_url">URL</string>
    <string name="text_search">Search</string>
    <string name="text_add">Add</string>
    <string name="text_remove">Remove</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_edit">Edit</string>
    <string name="text_import">Import</string>
    <string name="text_open_browser">Open in browser</string>
    <string name="text_sort">Sort</string>
    <string name="text_sort_name_asc">Sort: Name Asc.</string>
    <string name="text_sort_name_desc">Sort: Name Desc.</string>
    <string name="text_sort_date_new">Sort: Latest</string>
    <string name="text_sort_date_old">Sort: Oldest</string>
    <string name="text_group">Ingredients group</string>
    <string name="text_add_to_shopping_list">Add to shopping list</string>
    <string name="text_shopping_list_added">Ingredients added to shopping list</string>
    <string name="text_shopping_list">Shopping list</string>
    <string name="text_remove_all">Remove all</string>
    <string name="text_format">Format</string>
    <string name="text_format_numbers">Numbering</string>
    <string name="text_format_new_lines">Add line breaks</string>
    <string name="text_share_shopping_list">Share shopping list</string>
    <string name="text_importing_recipe">Importing the recipe...</string>
    <string name="text_import_success">Recipe imported!</string>
    <string name="error_website_not_supported">Cannot import from this website!</string>

</resources>