<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_name"/>

    <CheckBox
        android:id="@+id/checkBoxGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_group" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_text_size"
            android:padding="8dp"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_text_size"
            android:padding="8dp"
            android:text="@string/text_remove" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_text_size"
            android:padding="8dp"
            android:text="@string/text_confirm" />
    </LinearLayout>
</LinearLayout>
