<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_margin="10dp"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/text_search" />

        <Button
            android:id="@+id/buttonShopping"
            android:layout_margin="10dp"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/text_shopping_list" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_margin="10dp"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/text_add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>